--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -13,7 +13,7 @@
     </div><div class="right">
       <h2 class="vue">Jbone</h2>
       <h1>
-        Spring Cloud<br>综合应用实践和基础开发框架
+        Spring Cloud微服务架构<br>综合应用实践和基础开发框架
       </h1>
       <p>
         <a class="button" href="<%- url_for("/guide/") %>">起步</a>
