--- a/themes/vue/layout/partials/main_menu.ejs
+++ b/themes/vue/layout/partials/main_menu.ejs
@@ -9,5 +9,5 @@
 <%- partial('partials/learn_dropdown') %>
 -->
 <%- partial('partials/ecosystem_dropdown') %>
-
+<%- partial('partials/translate_dropdown') %>
 <li><a href="<%- url_for("/support-jbone/") %>" target="_blank" class="nav-link contribute">支持jbone</a></li>
