--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -42,7 +42,7 @@
   <%_if (theme.platinum_sponsors_china.length < 2) { _%>
   <br>
   <a class="become-backer" href="/support-jbone/">
-    成为特别赞助商
+    我要支持作者
   </a>
   <%_} _%>
 </div>
