--- a/themes/vue/layout/partials/translate_dropdown.ejs
+++ b/themes/vue/layout/partials/translate_dropdown.ejs
@@ -1,5 +1,5 @@
 <li class="nav-dropdown-container ecosystem">
-  <a class="nav-link">官文翻译</a><span class="arrow"></span>
+  <a class="nav-link">技术翻译</a><span class="arrow"></span>
   <ul class="nav-dropdown">
     <li><a href="<%- url_for("/translate/cas-management/") %>" class="nav-link<%- page.path.match(/\/sso(\/|$)/) ? ' current' : '' %>">CAS Management</a></li>
     <li><a href="<%- url_for("/translate/join.html") %>" class="nav-link<%- page.path.match(/\/sso(\/|$)/) ? ' current' : '' %>"><b>我也要加入翻译</b></a></li>
