--- a/themes/vue/layout/partials/toc.ejs
+++ b/themes/vue/layout/partials/toc.ejs
@@ -22,6 +22,11 @@
       <% } %>
 
     <% } %>
+        <% if (type === 'translate-cas') { %>
+            <% if (fileName === 'services-overview') { %>
+                <li><h3>服务管理</h3></li>
+            <% } %>
+        <% } %>
     <li>
       <a href="<%- url_for(p.path) %>" class="sidebar-link<%- page.title === p.title ? ' current' : '' %><%- p.is_new ? ' new' : '' %>"><%- p.title %></a>
     </li>
