--- a/themes/vue/layout/partials/learn_dropdown.ejs
+++ b/themes/vue/layout/partials/learn_dropdown.ejs
@@ -2,8 +2,6 @@
   <a class="nav-link<%- page.path.match(/\/(lean(?!\/team.html$)|cas|spring-cloud)(\/|$)/) ? ' current' : '' %>">学习</a><span class="arrow"></span>
   <ul class="nav-dropdown">
     <li><a href="<%- url_for("/learn/cas/") %>" class="nav-link<%- page.path.match(/\/lean(\/|$)/) ? ' current' : '' %>">CAS</a></li>
-    <!--
-    <li><a href="<%- url_for("/lean/spring-cloud/") %>" class="nav-link<%- page.path.match(/\/spring-cloud(\/|$)/) ? ' current' : '' %>">Spring Cloud</a></li>
-    -->
+    <li><a href="<%- url_for("/learn/spring-cloud/") %>" class="nav-link<%- page.path.match(/\/spring-cloud(\/|$)/) ? ' current' : '' %>">Spring Cloud</a></li>
   </ul>
 </li>
