--- a/themes/vue/layout/partials/toc.ejs
+++ b/themes/vue/layout/partials/toc.ejs
@@ -22,9 +22,9 @@
       <% } %>
 
     <% } %>
-        <% if (type === 'translate-cas') { %>
-            <% if (fileName === 'services-overview') { %>
-                <li><h3>服务管理</h3></li>
+        <% if (type === 'translate-cas-services') { %>
+            <% if (fileName === 'services-storage-inmemory') { %>
+                <li><h3>服务存储</h3></li>
             <% } %>
         <% } %>
 
