--- a/themes/vue/layout/partials/translate_dropdown.ejs
+++ b/themes/vue/layout/partials/translate_dropdown.ejs
@@ -1,7 +1,7 @@
 <li class="nav-dropdown-container ecosystem">
   <a class="nav-link">技术翻译</a><span class="arrow"></span>
   <ul class="nav-dropdown">
-    <li><a href="<%- url_for("/translate/cas/") %>" class="nav-link<%- page.path.match(/\/cas(\/|$)/) ? ' current' : '' %>">CAS</a></li>
+    <li><a href="<%- url_for("/translate/cas-services/") %>" class="nav-link<%- page.path.match(/\/cas-services(\/|$)/) ? ' current' : '' %>">CAS Services</a></li>
     <li><a href="<%- url_for("/translate/cas-management/") %>" class="nav-link<%- page.path.match(/\/cas-management(\/|$)/) ? ' current' : '' %>">CAS Management</a></li>
     <li><a href="<%- url_for("/translate/join.html") %>" class="nav-link<%- page.path.match(/\/translate(\/|$)/) ? ' current' : '' %>"><b>我也要加入翻译</b></a></li>
   </ul>
