--- a/themes/vue/layout/partials/translate_dropdown.ejs
+++ b/themes/vue/layout/partials/translate_dropdown.ejs
@@ -1,8 +1,19 @@
 <li class="nav-dropdown-container ecosystem">
   <a class="nav-link">技术翻译</a><span class="arrow"></span>
   <ul class="nav-dropdown">
-    <li><a href="<%- url_for("/translate/cas-services/") %>" class="nav-link<%- page.path.match(/\/cas-services(\/|$)/) ? ' current' : '' %>">CAS Services</a></li>
-    <li><a href="<%- url_for("/translate/cas-management/") %>" class="nav-link<%- page.path.match(/\/cas-management(\/|$)/) ? ' current' : '' %>">CAS Management</a></li>
+    <li><h4>Spring Cloud</h4></li>
+    <li>
+      <ul>
+        <li><a href="<%- url_for("/translate/spring-cloud-netflix-zuul/") %>" class="nav-link<%- page.path.match(/\/spring-cloud-netflix-zuul(\/|$)/) ? ' current' : '' %>">Spring Cloud Netflix Zuul</a></li>
+      </ul>
+    </li>
+    <li><h4>CAS</h4></li>
+    <li>
+      <ul>
+        <li><a href="<%- url_for("/translate/cas-services/") %>" class="nav-link<%- page.path.match(/\/cas-services(\/|$)/) ? ' current' : '' %>">CAS Services</a></li>
+        <li><a href="<%- url_for("/translate/cas-management/") %>" class="nav-link<%- page.path.match(/\/cas-management(\/|$)/) ? ' current' : '' %>">CAS Management</a></li>
+      </ul>
+    </li>
     <li><a href="<%- url_for("/translate/join.html") %>" class="nav-link<%- page.path.match(/\/translate(\/|$)/) ? ' current' : '' %>"><b>我也要加入翻译</b></a></li>
   </ul>
 </li>
