--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -90,7 +90,7 @@
       <%- partial('icons/gitee') %>
     </a>
   </p>
-  <p>遵循 <a href="https://opensource.org/licenses/MIT" target="_blank" rel="noopener">Apache 2.0 开源协议</a><br>
+  <p>遵循 <a href="https://opensource.org/licenses/Apache-2.0" target="_blank" rel="noopener">Apache 2.0 开源协议</a><br>
   Copyright &copy; 2017-<%- new Date().getFullYear() %> Ma Junwei</p>
 </div>
 
