--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -92,5 +92,6 @@
   </p>
   <p>遵循 <a href="https://opensource.org/licenses/Apache-2.0" target="_blank" rel="noopener">Apache 2.0 开源协议</a><br>
   Copyright &copy; 2017-<%- new Date().getFullYear() %> Ma Junwei</p>
+  <p><a href="https://beian.miit.gov.cn/" target="_blank">京ICP备14033738号-3</a>/p>
 </div>
 
