--- a/themes/vue/layout/page.ejs
+++ b/themes/vue/layout/page.ejs
@@ -49,7 +49,7 @@
     <%_ if (!page.sponsors) { _%>
       <%- partial('partials/ad-text') %>
     <%_ } _%>
-        <p><b>原创文章，欢迎转载！但请务必保留全文，并说明出处!</b></p>
+        <p><b>原创文章，谢绝转载！</b></p>
         <br />
         发现错误？想参与编辑？
     <a href="https://github.com/417511458/jbone.cn/blob/master/source/<%- page.path.replace(/\.html$/, '.md') %>" rel="noopener" target="_blank">
