--- a/themes/vue/layout/partials/translate_dropdown.ejs
+++ b/themes/vue/layout/partials/translate_dropdown.ejs
@@ -14,6 +14,6 @@
         <li><a href="<%- url_for("/translate/cas-management/") %>" class="nav-link<%- page.path.match(/\/cas-management(\/|$)/) ? ' current' : '' %>">CAS Management</a></li>
       </ul>
     </li>
-    <li><a href="<%- url_for("/translate/join.html") %>" class="nav-link<%- page.path.match(/\/translate(\/|$)/) ? ' current' : '' %>"><b>我也要加入翻译</b></a></li>
+<!--    <li><a href="<%- url_for("/translate/join.html") %>" class="nav-link<%- page.path.match(/\/translate(\/|$)/) ? ' current' : '' %>"><b>我也要加入翻译</b></a></li>-->
   </ul>
 </li>
