--- a/themes/vue/layout/partials/ecosystem_dropdown.ejs
+++ b/themes/vue/layout/partials/ecosystem_dropdown.ejs
@@ -1,5 +1,5 @@
 <li class="nav-dropdown-container ecosystem">
-  <a class="nav-link">生态系统</a><span class="arrow"></span>
+  <a class="nav-link">Jbone生态系统</a><span class="arrow"></span>
   <ul class="nav-dropdown">
     <li><a href="<%- url_for("/sso/") %>" class="nav-link<%- page.path.match(/\/sso(\/|$)/) ? ' current' : '' %>">单点登录</a></li>
     <!--
