--- a/themes/vue/layout/partials/main_menu.ejs
+++ b/themes/vue/layout/partials/main_menu.ejs
@@ -19,4 +19,4 @@
 <%- partial('partials/fund_dropdown') %>
 <%- partial('partials/translate_dropdown') %>
 <%- partial('partials/ecosystem_dropdown') %>
-<li><a href="<%- url_for("/contact-author/") %>" target="_blank" class="nav-link contribute">联系作者</a></li>
+<li><a href="<%- url_for("/contact-author/") %>" target="_blank" class="nav-link contribute">和作者交流</a></li>
